--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ load_gsap: true
 				<h1>
 					{% t page-home.intro.title %}
 				</h1>
-				<p>
+				<h4>
 					{% t page-home.intro.subtitle %}
-				</p>
+				</h4>
 			</div>
 			<div class="buttons">
 				{% include button.html
@@ -41,19 +41,19 @@ load_gsap: true
 			<p>{% t page-home.what-we-do.text1 %}</p>
 		</div>
 		<div class="row list-row">
-			<h4>{% t page-home.what-we-do.title2 %}</h4>
+			<div>{% t page-home.what-we-do.title2 %}</div>
 			<p>{% t page-home.what-we-do.text2 %}</p>
 		</div>
 		<div class="row list-row">
-			<h4>{% t page-home.what-we-do.title3 %}</h4>
+			<div>{% t page-home.what-we-do.title3 %}</div>
 			<p>{% t page-home.what-we-do.text3 %}</p>
 		</div>
 		<div class="row list-row">
-			<h4>{% t page-home.what-we-do.title4 %}</h4>
+			<div>{% t page-home.what-we-do.title4 %}</div>
 			<p>{% t page-home.what-we-do.text4 %}</p>
 		</div>
 		<div class="row list-row">
-			<h4>{% t page-home.what-we-do.title5 %}</h4>
+			<div>{% t page-home.what-we-do.title5 %}</div>
 			<p>{% t page-home.what-we-do.text5 %}</p>
 		</div>
 	</div>
