--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: page-product.title
-description: page-product.description
+title: about-us.title
+description: about-us.description
 load_gsap: true
 namespace:     aboutus
 
