--- a/howWeWork.html
+++ b/howWeWork.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: page-product.title
-description: page-product.description
+title: how-we-work.title
+description: how-we-work.description
 load_gsap: true
 namespace:     howWeWork
 
