--- a/whatWeDo.html
+++ b/whatWeDo.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: page-product.title
-description: page-product.description
+title: what-we-do.title
+description: what-we-do.description
 load_gsap: true
 namespace:     whatwedo
 
