--- a/workWithUs.html
+++ b/workWithUs.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: page-product.title
-description: page-product.description
+title: work-with-us.title
+description: work-with-us.description
 load_gsap: true
 namespace:     workWithUs
 
 permalink_cs: /workWithUs/
 permalink:    /workWithUs/
 ---
-<div>whatWeDo.html</div>
+<div>workWithUs.html</div>
