+ links and formatting

--- a/index.html
+++ b/index.html
@@ -462,11 +462,11 @@ load_gsap: true
 			<img src="{{ site.assetsPath }}/img/pages/home/logo_advantageSolutions-bottom.svg">
 			<div class="mail">		
 				<img src="{{ site.assetsPath }}/img/pages/home/email.svg">
-				<div>info@advantages.cz</div>
+				<a href = "mailto: info@advantages.cz">info@advantages.cz</a>
 			</div>
 			<div class="phone">		
 				<img src="{{ site.assetsPath }}/img/pages/home/phone.svg">
-				<div>+420 234 688 432</div>
+				<a href="tel:+420 234 688 432">+420 234 688 432</a>
 			</div>
 		</div>
 	</div>
