--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ load_gsap: true
 					</div>
 				</div>
 				<div class="member-card">
-					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-vavrda.png" class="member-pic">
+					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-vavrda.jpeg" class="member-pic">
 					<div class="text">
 						<div class="name">Tomáš Vavrda</div>
 						<p>{% t page-home.about-us.member-vavrda %}</p>
