--- a/index.html
+++ b/index.html
@@ -216,6 +216,54 @@ load_gsap: true
 					</div>
 				</div>
 			</div>
+			<div class="team-row">
+				<div class="member-card">
+					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-gerliczyova.png" class="member-pic">
+					<div class="text">
+						<div class="name">Majka Gerliczyová</div>
+						<p>{% t page-home.about-us.member-gerliczyova %}</p>
+					</div>
+				</div>
+				<div class="member-card">
+					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-hakr.png" class="member-pic">
+					<div class="text">
+						<div class="name">Nela Hakr</div>
+						<p>{% t page-home.about-us.member-hakr %}</p>
+					</div>
+				</div>
+				<div class="member-card">
+					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-rajtr.png" class="member-pic">
+					<div class="text">
+						<div class="name">Zdeněk Rajtr</div>
+						<p>{% t page-home.about-us.member-rajtr %}</p>
+					</div>
+				</div>
+			</div>
+			<div class="team-row">
+				<div class="member-card">
+					<img src="{{ site.assetsPath }}/img/pages/home/members/photo-tomasko.png" class="member-pic">
+					<div class="text">
+						<div class="name">Pavel Tomáško</div>
+						<p>{% t page-home.about-us.member-tomasko %}</p>
+					</div>
+				</div>
+
+				<div class="member-card empty">
+					{%- comment -%} <img src="{{ site.assetsPath }}/img/pages/home/members/photo-tomasko.png" class="member-pic"> {%- endcomment -%}
+					{%- comment -%} <div class="text">
+						<div class="name">Pavel Tomáško</div>
+						<p>{% t page-home.about-us.member-tomasko %}</p>
+					</div> {%- endcomment -%}
+				</div>
+				<div class="member-card empty">
+					{%- comment -%} <img src="{{ site.assetsPath }}/img/pages/home/members/photo-tomasko.png" class="member-pic"> {%- endcomment -%}
+					{%- comment -%} <div class="text">
+						<div class="name">Pavel Tomáško</div>
+						<p>{% t page-home.about-us.member-tomasko %}</p>
+					</div> {%- endcomment -%}
+				</div>
+
+			</div>
 		</div>
 	</div>
 </section>
