! Whole mail was not displayed on small phones

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ load_gsap: true
 			<img class="logo" src="{{ site.assetsPath }}/img/pages/home/logo_advantageSolutions-bottom.svg">
 			<div class="mail">
 				<img src="{{ site.assetsPath }}/img/pages/home/email.svg">
-				<a href="mailto: info@advantages.cz">info@advantages.cz</a>
+				<a href="mailto: info@advantages.cz">info@&#8203;advantages&#8203;.cz</a>
 			</div>
 			<div class="phone">
 				<img src="{{ site.assetsPath }}/img/pages/home/phone.svg">
