--- a/index.html
+++ b/index.html
@@ -431,45 +431,97 @@ load_gsap: true
 		</div>
 		<div class="table">
 			<div class="categories">
-				<div class="category active">
+				<div id="category1" class="category active">
 					{% t page-home.our-work.category1 %}
 				</div>
-				<div class="category">
+				<div id="category2" class="category">
 					{% t page-home.our-work.category2 %}
 				</div>
-				<div class="category">
+				<div id="category3" class="category">
 					{% t page-home.our-work.category3 %}
 				</div>
-				<div class="category">
+				<div id="category4" class="category">
 					{% t page-home.our-work.category4 %}
 				</div>
-				<div class="category">
+				<div id="category5" class="category">
 					{% t page-home.our-work.category5 %}
 				</div>
-				<div class="category">
+				<div id="category6" class="category">
 					{% t page-home.our-work.category6 %}
 				</div>
-				<div class="category">
+				<div id="category7" class="category">
 					{% t page-home.our-work.category7 %}
 				</div>
-				<div class="category">
+				<div id="category8" class="category">
 					{% t page-home.our-work.category8 %}
 				</div>
 			</div>
-			<div class="content">
-				<div class="tile-couple">
-					<div class="tile active-tile">
-						<img src="{{ site.assetsPath }}/img/pages/home/customers/leco.png">
-						<div>Le&Co</div>
-					</div>
-					<div class="tile">
-						<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
-						<div>WyBy</div>
-					</div>
+			<div id="category1-content" class="content visible">
+				<a class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/leco.png">
+					<div>Le&Co</div>
+				</a>
+				<div class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
 				</div>
 				<div class="tile">
 					<img src="{{ site.assetsPath }}/img/pages/home/customers/elpida.png">
 					<div>Elpida</div>
+				</div>
+			</div>
+			<div id="category2-content" class="content">
+				<div class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+				<div class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+				<div class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+				<div class="tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category3-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category4-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category5-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category6-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category7-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
+				</div>
+			</div>
+			<div id="category8-content" class="content">
+				<div class="tile active-tile">
+					<img src="{{ site.assetsPath }}/img/pages/home/customers/wyby.png">
+					<div>WyBy</div>
 				</div>
 			</div>
 		</div>
