--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@ load_gsap: true
 			</div>
 			<img src="{{ site.assetsPath }}/img/pages/home/logo_advantageSolutions.svg" class="logo">
 		</div>
+	</div>
 </section>
 <section class="our-work">
 	<div class="container">
