~ Navbar items order

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ load_gsap: true
 		%}
 	</div>
 </section>
-<section class="help-clients">
+<section id="help-clients">
 	<div class="container">
 		<div class="first-row">
 			<h3>{% t page-home.help-clients.title %}</h3>
