--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@ load_gsap: true
 				<div id="industry{{forloop.index}}-content" class="content {% if forloop.index == 1 %}visible{% endif %}">
 					{% for item in industry.content %}
 						<a class="tile" href={{item.link}} target="_blank" rel="noopener noreferrer">
-						<img src="{{ site.assetsPath }}/{{item.image}}">
+						<div class="image">
+							<img src="{{ site.assetsPath }}/{{item.image}}">
+						</div>
 						<div>{{item.name}}</div>
 					</a>
 					{% endfor %}
