--- a/404.html
+++ b/404.html
@@ -2,15 +2,15 @@
 layout: default
 permalink: /404.html
 ---
-<section class="community">
+<section class="not-found-root">
     <div class="container">
         <div class="titles">
             <h1>
                 Page not found :(
             </h1>
-            <p>
-                The page you are looking for does not exist. Maybe you wanted to visite one of these?
-            </p>
+            <h4>
+                The page you are looking for does not exist.
+            </h4>
         </div>
     </div>
 </section>
