--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@ load_gsap: true
 			{% for industry in site.translations[site.lang].page-home.our-work.industries %}
 				<div id="industry{{forloop.index}}-content" class="content {% if forloop.index == 1 %}visible{% endif %}">
 					{% for item in industry.content %}
-						<a class="tile" href={{item.link}} target="_blank" rel="noopener noreferrer">
+						 <a class="tile"
+     						{% if item.link and item.link | strip != "" %}href="{{item.link}}" target="_blank" rel="noopener noreferrer"{% endif %}>
 						<div class="image">
 							<img src="{{ site.assetsPath }}/{{item.image}}">
 						</div>
