--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@ permalink: /404.html
     <div class="container">
         <div class="titles">
             <h1>
-                Page not found :(
+                {% t not-found.title %}
             </h1>
             <h4>
-                The page you are looking for does not exist.
+                {% t not-found.details %}
             </h4>
         </div>
     </div>
