--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@ load_gsap: true
 					title="page-home.about-us.card6"
 					text="page-home.about-us.card6-back-side"
 				%}
+				{% include aboutUsCard.html
+					title="page-home.about-us.card7"
+					text="page-home.about-us.card7-back-side"
+				%}
 			</div>
 		</div>
 		<div class="team">
